--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">Keep
+<mat-toolbar color="warn">Keep
 	<div class="keep-c-toggle-view">
-		<i *ngIf="isNoteView" class="material-icons switchToListView">view_list</i>
-		<i *ngIf="!isNoteView" class="material-icons switchToNoteView">view_quilt</i>
+		<i *ngIf="isNoteView" class="material-icons switchToListView" (click)="switchToListView()">view_list</i>
+		<i *ngIf="!isNoteView" class="material-icons switchToNoteView" (click)="switchToNoteView()">view_quilt</i>
 	</div>
 </mat-toolbar>
